# yaLLMproxy

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  Taskfile.yml  __init__.py  alembic.ini  check_db.py  extract_model_output.py  install.bat  install.sh  litellm_config.yaml  messages_plan.md  proxy.py  pyproject.toml  replay_request.py  run.bat  run.sh  run_forwarder.bat  run_forwarder.sh  run_http_forwarder.bat  run_http_forwarder.sh  shared_core.md  test_api.py  test_api_fields.py  test_api_size.py  test_frontend_issue.py  test_logs_api.py  test_proxy.py  test_user_server.py
.claude/: settings.local.json
alembic/: README  env.py  script.py.mako
certs/: .gitignore
configs/: .env.example  config.yaml  config_added.yaml  config_default.yaml  config_example.yaml
docs/: api.md  areas_to_improve.md  code_review.md  config_reload_bug.md  configuration.md  database.md  known_issues.md  model_tree.md  project-structure.md  testing.md
scripts/: db_clean.py  generate_certs.bat  generate_certs.sh  inspect_template.py  install.bat  install.sh  manual_test.py  print_run_config.py  replay_request.py  run.bat  run.sh  run_forwarder.bat  run_forwarder.sh  run_http_forwarder.bat  run_http_forwarder.sh  simulate_proxy.py  tcp_forward.py
src/: __init__.py  config_loader.py  config_store.py  http_forwarder.py  main.py  usage_metrics.py
tests/: conftest.py  test_admin_config_masking.py  test_backend.py  test_client_disconnect.py  test_concurrency.py  test_config_loader.py  test_config_reload.py  test_config_reload_bug.py  test_config_store.py  test_database.py  test_database_logger.py  test_embeddings.py  test_exceptions.py  test_finish_reason_bug.py  test_gigachat_adapter.py  test_http_forwarder.py  test_log_routing.py  test_logs_repository.py  test_masking.py  test_messages_stream_adapter.py  test_messages_translator.py  test_minimax_reasoning_details.py  test_model_inheritance.py  test_model_tree.py  test_multiple_tool_calls.py  test_nonstream_logging.py  test_parse_unparsed.py  (+23 more)
(+98 files in other folders)
