[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yallmp-proxy"
version = "0.1.0"
description = "Yet Another LLM Proxy - A lightweight, modular LLM proxy with fallback support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx[http2]>=0.24.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "aiohttp>=3.13.2",
    "pycurl>=7.45.7",
    "pyopenssl>=25.3.0",
    "openai>=2.14.0",
]

[dependency-groups]
dev = [
    "httpx[http2]>=0.24.0",
    "jinja2>=3.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/pyproject.toml",
    "/README.md",
]
